// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VolumeControl mute button mutes and unmutes volume: after muting 1`] = `
<DocumentFragment>
  .emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-2 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-right: 8px;
}

.emotion-2 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 {
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  padding: 0;
  width: 32px;
  height: 32px;
  cursor: pointer;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
}

.emotion-4 {
  background-color: #cccccc;
  border-radius: 100vw;
  margin: 0 16px;
  cursor: pointer;
  height: 12px;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4:disabled {
  background-color: #f0f0f0;
  border-color: #9c9c9c;
  color: #9c9c9c;
}

.emotion-4:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-3 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-3:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-3:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  border-color: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-6 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-left: 8px;
}

.emotion-6 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-6:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-6:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-7"
  >
    <div
      class="emotion-2"
      data-testid="min-label"
    >
      <button
        class="emotion-1"
        data-testid="mute-button"
        type="button"
      >
        <svg
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title>
            Volume mute
          </title>
          <path
            d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <div
      class="emotion-4"
      data-testid="volume-control"
      values="0"
    >
      <div
        aria-label="Volume Control"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0"
        class="emotion-3"
        draggable="false"
        role="slider"
        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
        tabindex="0"
      />
    </div>
    <div
      class="emotion-6"
      data-testid="max-label"
    >
      <svg
        class="emotion-0"
        viewBox="0 0 24 24"
      >
        <title>
          Volume up
        </title>
        <path
          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeControl mute button mutes and unmutes volume: after unmuting 1`] = `
<DocumentFragment>
  .emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-2 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-right: 8px;
}

.emotion-2 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 {
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  padding: 0;
  width: 32px;
  height: 32px;
  cursor: pointer;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
}

.emotion-4 {
  background-color: #cccccc;
  border-radius: 100vw;
  margin: 0 16px;
  cursor: pointer;
  height: 12px;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4:disabled {
  background-color: #f0f0f0;
  border-color: #9c9c9c;
  color: #9c9c9c;
}

.emotion-4:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-3 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-3:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-3:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  border-color: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-6 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-left: 8px;
}

.emotion-6 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-6:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-6:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-7"
  >
    <div
      class="emotion-2"
      data-testid="min-label"
    >
      <button
        class="emotion-1"
        data-testid="mute-button"
        type="button"
      >
        <svg
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title>
            Volume down
          </title>
          <path
            d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <div
      class="emotion-4"
      data-testid="volume-control"
      values="0.8"
    >
      <div
        aria-label="Volume Control"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0.8"
        class="emotion-3"
        draggable="false"
        role="slider"
        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
        tabindex="0"
      />
    </div>
    <div
      class="emotion-6"
      data-testid="max-label"
    >
      <svg
        class="emotion-0"
        viewBox="0 0 24 24"
      >
        <title>
          Volume up
        </title>
        <path
          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeControl renders horizontal volume control by default 1`] = `
<DocumentFragment>
  .emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-2 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-right: 8px;
}

.emotion-2 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 {
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  padding: 0;
  width: 32px;
  height: 32px;
  cursor: pointer;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
}

.emotion-4 {
  background-color: #cccccc;
  border-radius: 100vw;
  margin: 0 16px;
  cursor: pointer;
  height: 12px;
  width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4:disabled {
  background-color: #f0f0f0;
  border-color: #9c9c9c;
  color: #9c9c9c;
}

.emotion-4:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-3 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-3:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-3:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  border-color: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-6 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-left: 8px;
}

.emotion-6 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-6:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-6:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-7"
  >
    <div
      class="emotion-2"
      data-testid="min-label"
    >
      <button
        class="emotion-1"
        data-testid="mute-button"
        type="button"
      >
        <svg
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title>
            Volume down
          </title>
          <path
            d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <div
      class="emotion-4"
      data-testid="volume-control"
      values="1"
    >
      <div
        aria-label="Volume Control"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="1"
        class="emotion-3"
        draggable="false"
        role="slider"
        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
        tabindex="0"
      />
    </div>
    <div
      class="emotion-6"
      data-testid="max-label"
    >
      <svg
        class="emotion-0"
        viewBox="0 0 24 24"
      >
        <title>
          Volume up
        </title>
        <path
          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeControl renders vertical volume control by default 1`] = `
<DocumentFragment>
  .emotion-1 {
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  padding: 0;
  width: 32px;
  height: 32px;
  cursor: pointer;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 24px;
  height: 24px;
}

.emotion-3 {
  background-color: #FFFFFF;
  border-style: solid;
  border-color: #0A68C1;
  border-width: 1px;
  color: #0A68C1;
  border-radius: 100vw;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-3 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-3:hover:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-3:active:not(:disabled) {
  box-shadow: 0 0 0 4px rgba(200,228,253,0.60);
}

.emotion-3:disabled {
  background-color: #f0f0f0;
  border-color: #9c9c9c;
  color: #9c9c9c;
}

.emotion-3:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 32px;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.emotion-2 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-top: 8px;
}

.emotion-2 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-2:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-4 {
  background-color: #cccccc;
  border-radius: 100vw;
  margin: 16px 0;
  cursor: pointer;
  height: 100%;
  width: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-4:disabled {
  background-color: #f0f0f0;
  border-color: #9c9c9c;
  color: #9c9c9c;
}

.emotion-4:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-6 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #0A68C1;
  margin-bottom: 8px;
}

.emotion-6 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-6:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-6:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-7"
  >
    <div
      class="emotion-2"
      data-testid="min-label"
    >
      <button
        class="emotion-1"
        data-testid="mute-button"
        type="button"
      >
        <svg
          class="emotion-0"
          viewBox="0 0 24 24"
        >
          <title>
            Volume down
          </title>
          <path
            d="M18.5 12c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM5 9v6h4l5 5V4L9 9H5z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
    <div
      class="emotion-4"
      data-testid="volume-control"
      values="1"
    >
      <div
        aria-label="Volume Control"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="1"
        class="emotion-3"
        draggable="false"
        role="slider"
        style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(NaNpx, NaNpx);"
        tabindex="0"
      />
    </div>
    <div
      class="emotion-6"
      data-testid="max-label"
    >
      <svg
        class="emotion-0"
        viewBox="0 0 24 24"
      >
        <title>
          Volume up
        </title>
        <path
          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
